service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: apps
spec:
  selector:
    app: sonarr
  ports:
  - name: http
    targetPort: 8989
    port: 8989
